tests/errors/parser/invalid-width.futil
component main() -> () {
  cells { }
  wires {
    r.in = 0'd1;
  }
  control { }
}
